kubernetes/manifests/aks/clockui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: clockui
 labels:
   app: clockui
spec:
 replicas: 1
 selector:
   matchLabels:
     app: clockui
 template:
   metadata:
     labels:
       app: clockui
   spec:
     imagePullSecrets:
     - name: regsecret
     containers:
     - name: clockui
       image: registry4demos.azurecr.io/patriciochavez/clockui:latest
       ports:
       - containerPort: 3000
