kubernetes/manifests/aks/svc-clockbroker.yaml
apiVersion: v1
kind: Service
metadata:
   name: svc-clockbroker
spec:
   selector:
     app: clockbroker
   ports:
     - name: mqtt
       protocol: TCP
       port: 1883
       targetPort: 1883
     - name: ws
       protocol: TCP
       port: 9001
       targetPort: 9001
   type: LoadBalancer
