kubernetes/manifests/aks/clockingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clockui-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: aks-clockui
          servicePort: 80
        path: /(.*)
